Initial CD workflow.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "lint:fix": "eslint src --fix",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "preflight": "npm run format && npm run lint:fix && npm test"
+        "preflight": "npm run format && npm run lint:fix && npm test",
+        "postversion": "git commit --amend -m \"obskit-$npm_package_version\""
     },
     "dependencies": {
         "obsidian": "^1.8.7"
