--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,7 +4,7 @@ run-name: Release ${{ github.ref_name }}
 on:
     push:
         tags:
-            - 'v[0-9]+.[0-9]+.[0-9]+'
+            - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
     release:
@@ -17,8 +17,8 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: '22.18.0'
-                  cache: 'npm'
+                  node-version: "22.18.0"
+                  cache: "npm"
 
             - name: Install dependencies
               run: npm ci
