--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
         "moduleDetection": "force",
         "skipLibCheck": true
     },
-    "exclude": ["tmp/**/*", "node_modules/**/*", "dist/**/*"]
+    "exclude": ["tmp/**/*", "node_modules/**/*", "dist/**/*", "plugin/**/*"]
 }
