--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "require": "./dist/index.js"
+            "import": "./dist/index.js",
+            "require": "./dist/index.js",
+            "default": "./dist/index.js"
         }
     },
     "files": [
@@ -42,13 +44,15 @@
         "release": "npm run preflight && git push && git push --tags",
         "postversion": "git commit --amend -m \"obskit-$npm_package_version\""
     },
+    "peerDependencies": {
+        "obsidian": "^1.8.7"
+    },
     "devDependencies": {
         "@types/node": "^24.3.0",
         "@typescript-eslint/eslint-plugin": "^8.40.0",
         "@typescript-eslint/parser": "^8.40.0",
         "eslint": "^9.34.0",
         "husky": "^9.1.7",
-        "obsidian": "^1.8.7",
         "tslib": "2.8.1",
         "lint-staged": "^16.1.5",
         "prettier": "^3.6.2",
